# esp32s3_i2s_mic_idf

./: .env.example  .gitignore  Cargo.toml  Justfile  README.md  build.rs  sdkconfig.defaults
src/: jtag.rs  lib.rs  main.rs  websocket.rs
tools/: Caddyfile  index.html  pcm-player-worklet.js
tools/serial_to_stdout/: Cargo.toml
tools/serial_to_stdout/src/: main.rs
