[package]
name = "esp32s3_i2s_mic_idf"
version = "0.1.0"
authors = ["Lukasz Gintowt <syzer3@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32s3_i2s_mic_idf"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

# Optional feature for the websocket helper binary (adds async wifi, heapless, etc.)
websocket = ["heapless", "embedded-svc", "esp-idf-hal", "tokio", "tokio-tungstenite", "once_cell", "futures-util", "tokio/time"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
anyhow = "1.0"
esp-idf-sys = "0.36"
heapless = { version = "0.8.0", optional = true }
embedded-svc = { version = "0.28.1", features = ["experimental", "use_serde"], optional = true }
esp-idf-hal = { version = "0.45.2", optional = true }
tokio = { version = "1.39.3", features = ["rt", "macros", "net", "sync"], optional = true }
tokio-tungstenite = { version = "0.20", optional = true }
once_cell = { version = "1.20", optional = true }
futures-util = { version = "0.3", optional = true }

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc.) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33"
dotenvy = "0.15"
